--- a/config.toml
+++ b/config.toml
@@ -45,41 +45,41 @@ paginate = 5
         identifier = "services"
         name = "Services"
         url = "/posts/services/"
-        pre = "jefferson-santos-9SoCnyQmkzI-unsplash.jpg"
+        pre = "services.png"
         post= "Quis aute dolore proident velit incididunt incididunt esse culpa Lorem in do ipsum."
         weight = 10
       [[languages.en.menu.main]]
         identifier = "about"
         name = "About"
         url = "/posts/about/"
-        pre = "kaleb-tapp-J59wWPn09BE-unsplash.jpg"
+        pre = "about.png"
         post= "Quis aute dolore proident velit incididunt incididunt esse culpa Lorem in do ipsum."
         weight = 50
       [[languages.en.menu.main]]
         identifier = "training"
         name = "Training"
         url = "/posts/training/"
-        pre = "kaur-kristjan-CpPF4W5PB1c-unsplash.jpg"
+        pre = "training.png"
         post = "Ex elit culpa elit cillum labore."
         weight = 100
       [[languages.en.menu.main]]
         identifier = "tools"
         name = "Tools"
         url = "/tools/"
-        pre = "muhannad-ajjan-sL2BRR1cuvM-unsplash.jpg"
+        pre = "tools.png"
         post = "Occaecat ipsum anim consectetur eiusmod do commodo proident exercitation nulla enim pariatur ullamco adipisicing laborum."
         weight = 1000
       [[languages.en.menu.main]]
         identifier = "blog"
         name = "Blogs"
         url = "/blogs/"
-        pre = "pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg"
+        pre = "blogs.png"
         post = "Fugiat cillum ea reprehenderit laborum ad quis eiusmod ullamco consequat."
         weight = 10000
       [[languages.en.menu.main]]
         identifier = "vulnerabilities"
         name = "Vulnerabilities"
         url = "/vulnerabilities/"
-        pre = "paulius-dragunas-uw_NWjC1mBE-unsplash.jpg"
+        pre = "vulns.png"
         post = "Consectetur sit sint pariatur aute reprehenderit nisi ad id non excepteur."
         weight = 100000
