--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.redteam.ng"
+baseurl = "https://www.redteam.ng/blogs"
 languageCode = "en-us"
 theme = "hello-friend-ht"
 paginate = 5
