--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ paginate = 5
   showMenuItems = 0
   # Enable to show reading time in minutes for posts
   showReadingTime = false
-
+  enableSharingButtons = true
 [taxonomies]
   blogs = "blogs"
 
